# robotics-projects-ROS

./: README.md  package.xml  setup.cfg  setup.py
custom_joint_control/: compute_sdf.py  force_velocity_adv.py  generate_joint_angles.py  main_eff_pose_control.py  self_collision_checker.py  validate_joint_configuration.py
custom_joint_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
custom_joint_control/launch/: eff_control.launch.py  moveit_gazebo_vel.launch.py
custom_joint_control/log/: latest_build
