<?xml version="1.0"?>
<package format="3">
  <name>custom_joint_control</name>
  <version>0.0.1</version>
  <description>Joint velocity control package for xArm7 using ROS2</description>
  <maintainer email="r.souzadaniel@outlook.com">Daniel Souza</maintainer>
  <license>Stevens</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>moveit_msgs</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
